# malloc.polish_bond

./: .gitignore  README.md  pyproject.toml  test.csv
src/malloc/polish_bond/: __init__.py  bond.py  dataset.py
src/malloc/polish_bond_value/: __init__.py  bond.py  calculations.py  utils.py
tests/: conftest.py  test_bond_daily_values.py  test_bond_maker.py  test_bond_maturity_date.py  test_bond_value.py  test_bond_value_history.py  test_cash_flow.py  test_current_value.py  test_dataset_info.py
tests/data/: Dane_dotyczace_obligacji_detalicznych.xls
